--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>FontEditor</title>
-    <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://zzy-ac.github.io/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./dep/bootstrap/css/bootstrap.min.css">
 <link href="css/index-13b09ba1.css" rel="stylesheet"></head>
 <body>
 
     <section class="navbar" role="navigation">
-        <div class="logo"></div>
+
         <div class="action-groups btn-groups">
 
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
