--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FontEditor</title>
-    <link rel="shortcut icon" href="https://zzy-ac.github.io/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://zzy-ac.github.io/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="./dep/bootstrap/css/bootstrap.min.css">
 <link href="css/index-13b09ba1.css" rel="stylesheet"></head>
 <body>
