--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="navbar" role="navigation">
-
+        <div class="logo"></div>
         <div class="action-groups btn-groups">
 
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
