--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="navbar" role="navigation">
-        <img src="https://zzy-ac.github.io/fonteditor/font_editor.png" width="150px"; height="56px"; style="position:absolute; left:100px; top:100px; ">
+        <img src="https://zzy-ac.github.io/fonteditor/font_editor.png" width="150px"; height="56px">
         <div class="action-groups btn-groups">
 
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
