--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="navbar" role="navigation">
-        <div><img src="https://zzy-ac.github.io/fonteditor/font_editor.png" width="150px"; height="56px"></div>
+        <div><img src="https://zzy-ac.github.io/fonteditor/font_editor.png" float:left;width:180px;height:50px;background:url></div>
         <div class="action-groups btn-groups">
 
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
