--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
     <section class="navbar" role="navigation">
+        <div class="logo"><img src="https://zzy-ac.github.io/fonteditor/font_editor.png" float:left;width:180px;height:50px;background:url></div>
         <div class="action-groups btn-groups">
-        <img src="https://zzy-ac.github.io/fonteditor/font_editor.png" float:left;width:180px;height:50px;background:url>
+        
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
             <i class="split"></i>
 
