--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="navbar" role="navigation">
-        <div class="logo"><img src="https://zzy-ac.github.io/fonteditor/font_editor.png" style:"float:left;width:200px;height:45px"></div>
+        <div class="logo"><img src="https://zzy-ac.github.io/fonteditor/font_editor.png"></div>
         <div class="action-groups btn-groups">
         
             <button data-action="add-new" type="button" class="btn btn-flat btn-new btn-sm"><i class="ico ico-left i-add"></i>新字形</button>
