--- a/index-en.html
+++ b/index-en.html
@@ -95,7 +95,7 @@
             <a href="./index.html">中文</a> |
             <a href="./index-en.html">English</a>
         </div>
-        <a class="ico i-github forkme" href="https://github.com/ecomfe/fonteditor" target="_blank">Fork me on Github</a>
+        <a class="ico i-github forkme" href="https://github.com/zzy-ac/fonteditor" target="_blank">Fork me on Github</a>
         <a class="ico i-help userguide" href="./doc/index.html" target="_blank">Help</a>
     </section>
 
